// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader correctly render when hidden 1`] = `
.c0 {
  display: grid;
  gap: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  opacity: 1;
  visibility: visible;
  -webkit-transition: visibility 0.3s,opacity 0.9s linear;
  transition: visibility 0.3s,opacity 0.9s linear;
  z-index: 9100;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Loader correctly render when showed 1`] = `
.c0 {
  display: grid;
  gap: 2rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: black;
  opacity: 0;
  visibility: hidden;
  -webkit-transition: visibility 0.3s,opacity 0.9s linear;
  transition: visibility 0.3s,opacity 0.9s linear;
  z-index: 9100;
}

<div>
  <div
    class="c0"
  />
</div>
`;
